--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ansi-styles": "^4.3.0",
     "array-flatten": "^1.1.1",
     "async": "^3.2.6",
+    "aws-serverless-express": "^3.4.0",
     "balanced-match": "^1.0.2",
     "body-parser": "^1.20.3",
     "brace-expansion": "^1.1.11",
