--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.mjs"
   },
   "keywords": [],
   "author": "",
