--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.mjs"
+    "start": "node local.mjs"
   },
   "keywords": [],
   "author": "",
